@@ -30,6 +30,7 @@ import java.util.List;
 import java.util.UUID;
 
 import static edu.unc.lib.boxc.auth.api.Permission.viewOriginal;
+import static edu.unc.lib.boxc.model.api.DatastreamType.JP2_ACCESS_COPY;
 import static edu.unc.lib.boxc.model.api.DatastreamType.ORIGINAL_FILE;
 import static edu.unc.lib.boxc.model.api.DatastreamType.TECHNICAL_METADATA;
 import static edu.unc.lib.boxc.web.common.services.AccessCopiesService.AUDIO_MIMETYPE_REGEX;
@@ -103,7 +104,6 @@ public class AccessCopiesServiceTest  {
         accessCopiesService.setGlobalPermissionEvaluator(globalPermissionEvaluator);
 
         when(solrSearchService.getSearchResults(searchRequestCaptor.capture())).thenReturn(searchResultResponse);
-        when(searchResultResponse.getResultCount()).thenReturn(1L);
     }
 
     @AfterEach
@@ -151,14 +151,26 @@ public class AccessCopiesServiceTest  {
         return mdObject;
     }
 
+    private ContentObjectSolrRecord createXPdfObject(ResourceType resourceType) {
+        var mdObject = new ContentObjectSolrRecord();
+        mdObject.setResourceType(resourceType.name());
+        mdObject.setId(UUID.randomUUID().toString());
+        List<String> datastreams = Collections.singletonList(
+                ORIGINAL_FILE.getId() + "|application/x-pdf|file.pdf|pdf|766|urn:sha1:checksum|");
+        mdObject.setFileFormatCategory(Collections.singletonList(ContentCategory.text.getDisplayName()));
+        mdObject.setFileFormatType(Collections.singletonList("application/x-pdf"));
+        mdObject.setDatastream(datastreams);
+        return mdObject;
+    }
+
     private ContentObjectSolrRecord createImgObject(ResourceType resourceType) {
         var mdObjectImg = new ContentObjectSolrRecord();
         mdObjectImg.setResourceType(resourceType.name());
-        mdObjectImg.setId(UUID.randomUUID().toString());
-        List<String> imgDatastreams = Arrays.asList(
+        var id = UUID.randomUUID().toString();
+        mdObjectImg.setId(id);
+        List<String> imgDatastreams = List.of(
                 ORIGINAL_FILE.getId() + "|image/png|file.png|png|766|urn:sha1:checksum|",
-                DatastreamType.THUMBNAIL_LARGE.getId() + "|image/png|thumb|png|55||",
-                DatastreamType.JP2_ACCESS_COPY.getId() + "|image/jp2|thumb|jp2|555||");
+                JP2_ACCESS_COPY.getId() + "|image/jp2|bunny.jp2|jp2|||" + id + "|1200x1200");
         mdObjectImg.setFileFormatCategory(Collections.singletonList(ContentCategory.image.getDisplayName()));
         mdObjectImg.setFileFormatType(Collections.singletonList("image/png"));
         mdObjectImg.setDatastream(imgDatastreams);
@@ -292,9 +304,8 @@ public class AccessCopiesServiceTest  {
         var mdObjectImg2 = new ContentObjectSolrRecord();
         mdObjectImg2.setResourceType(ResourceType.File.name());
         mdObjectImg2.setId(UUID.randomUUID().toString());
-        var imgDatastreams = Arrays.asList(
-                ORIGINAL_FILE.getId() + "|image/jpg|file2.png|png|555|urn:sha1:checksum|",
-                DatastreamType.THUMBNAIL_LARGE.getId() + "|image/png|thumb|png|55||");
+        var imgDatastreams = List.of(
+                ORIGINAL_FILE.getId() + "|image/jpg|file2.png|png|555|urn:sha1:checksum|");
         mdObjectImg2.setFileFormatCategory(Collections.singletonList(ContentCategory.image.getDisplayName()));
         mdObjectImg2.setFileFormatType(Collections.singletonList("png"));
         mdObjectImg2.setDatastream(imgDatastreams);
@@ -380,14 +391,14 @@ public class AccessCopiesServiceTest  {
     public void hasViewableFilesAudioFileTest() {
         var mdObjectAudio = createAudioObject(ResourceType.File);
         hasPermissions(mdObjectAudio, true);
-
+        when(searchResultResponse.getResultCount()).thenReturn(1L);
         assertFalse(accessCopiesService.hasViewableFiles(mdObjectAudio, principals));
     }
 
     @Test
     public void hasViewableFilesImageWorkTest() {
         hasPermissions(mdObjectImg, true);
-
+        when(searchResultResponse.getResultCount()).thenReturn(1L);
         assertTrue(accessCopiesService.hasViewableFiles(mdObjectImg, principals));
         assertRequestedDatastreamFilter(DatastreamType.JP2_ACCESS_COPY);
     }
@@ -398,6 +409,7 @@ public class AccessCopiesServiceTest  {
         hasPermissions(mdObjectAudio, true);
 
         when(searchResultResponse.getResultList()).thenReturn(List.of(mdObjectAudio));
+        when(searchResultResponse.getResultCount()).thenReturn(1L);
         var audioObj = accessCopiesService.getFirstStreamingChild(mdObjectAudio, principals);
         assertEquals("sound", audioObj.getStreamingType());
         assertHasPopulatedFieldFilter(SearchFieldKey.STREAMING_TYPE);
@@ -408,6 +420,7 @@ public class AccessCopiesServiceTest  {
         var mdObjectVideo = createVideoObject(ResourceType.Work);
         hasPermissions(mdObjectVideo, true);
         when(searchResultResponse.getResultList()).thenReturn(List.of(mdObjectVideo));
+        when(searchResultResponse.getResultCount()).thenReturn(1L);
         var videoObj = accessCopiesService.getFirstStreamingChild(mdObjectVideo, principals);
         assertEquals("video", videoObj.getStreamingType());
         assertHasPopulatedFieldFilter(SearchFieldKey.STREAMING_TYPE);
@@ -427,6 +440,51 @@ public class AccessCopiesServiceTest  {
         hasPermissions(mdObjectVideoFile, true);
 
         assertNull(accessCopiesService.getFirstStreamingChild(mdObjectVideoFile, principals));
+    }
+
+    @Test
+    public void hasMatchingChildTest() {
+        var mdObjectPdf = createPdfObject(ResourceType.Work);
+        hasPermissions(mdObjectPdf, true);
+        when(searchResultResponse.getResultList()).thenReturn(List.of(mdObjectPdf));
+        when(searchResultResponse.getResultCount()).thenReturn(1L);
+        var pdfObj = accessCopiesService.getFirstMatchingChild(mdObjectPdf,
+                List.of("application/pdf"), principals);
+        assertNotNull(pdfObj);
+        assertTrue(pdfObj.getFileFormatType().contains("application/pdf"));
+    }
+
+    @Test
+    public void hasMatchingChildXPDFTest() {
+        var mdObjectPdf = createXPdfObject(ResourceType.Work);
+        hasPermissions(mdObjectPdf, true);
+        when(searchResultResponse.getResultList()).thenReturn(List.of(mdObjectPdf));
+        when(searchResultResponse.getResultCount()).thenReturn(1L);
+        var pdfObj = accessCopiesService.getFirstMatchingChild(mdObjectPdf,
+                Arrays.asList("application/pdf", "application/x-pdf"), principals);
+        assertNotNull(pdfObj);
+        assertTrue(pdfObj.getFileFormatType().contains("application/x-pdf"));
+    }
+
+    @Test
+    public void hasNoMatchingChildForSpecifiedFileTypeTest() {
+        hasPermissions(mdObjectXml, true);
+        when(searchResultResponse.getResultList()).thenReturn(List.of(mdObjectXml));
+        when(searchResultResponse.getResultCount()).thenReturn(0L);
+        var xmlObj = accessCopiesService.getFirstMatchingChild(mdObjectXml,
+                List.of("application/pdf"), principals);
+
+        assertNull(xmlObj);
+    }
+
+    @Test
+    public void hasNoMatchingChildForFilesTest() {
+        var mdObject = createPdfObject(ResourceType.File);
+        hasPermissions(mdObject, true);
+        when(searchResultResponse.getResultList()).thenReturn(List.of(mdObject));
+        var obj = accessCopiesService.getFirstMatchingChild(mdObject,
+                List.of("application/pdf"), principals);
+        assertNull(obj);
     }
 
     private void hasPermissions(ContentObjectSolrRecord contentObject, boolean hasAccess) {
